--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <!-- header -->
-    <div class="container">
-        <header>
-            <h1>M.ELarby</h1>
-            <ul>
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </header>
-    </div>
+    <!-- start Header  -->
+    <header>
+        <div class="container">
+            <a href="#" class="logo">
+                <h1>M.ELarby</h1>
+            </a>
+            <nav>
+                <i class="fa-solid fa-bars toggle-menu"></i>
+                <ul>
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Project</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="form">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- end Header  -->
     <section class="landing-page">
         <div class="container">
             <div class="my-por">
